2000-10-17 00:55 UTC+0800 Ron Pinkas <ron@profit-master.com>
    * contrib/dot
      ! contrib/dot/pp.prg
	! Fixed bug with processing of #include within #ifdef
	! Fixed handling of unterminated strings crossing file read buffer boundaries.
	! Fixed association of := and -> within NextExp()
	  /* I'm now able to PP my largest prg without any difference from Clipper (other then minor spacing
             differences). */

2000-10-16 20:22 GMT+1 Victor Szakats <vector@matavnet.hu>
   * source/rtl/run.c
     ! __RUN() fixed.

2000-10-16 04:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
    + contrib/dot
      + contrib/dot/pp.prg
      + contrib/dot/rp_dot.prg

      /* 1st. version of a self contained Clipper/Harbour Pre-Processor and a "DOT" prompt
      environment, written in the Clipper language. */

2000-10-15 14:25 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
    *source/macro/macro.l
        *fixed some minor bugs

    *source/rdd/rddcpy.c
        *changed some NULL to 0 to stop warnings in GCC

    *source/rdd/dbfcdx/dbfcdx1.c
        *fixed handling of memo free blocks
        *fixed some warnings when compiled with GCC

2000-10-15 12:45 UTC+0800 Brian Hays <bhays@abacuslaw.com>
   * source/rdd/dbcmd.c
      * fixed ordKey (and therefore IndexKey() ) to accept a NIL parameter
   * contrib/rdd_ads/ads1.c
      * Changed SetFilter to see if the server can evaluate the filter.
      If not, we don't pass it to the server and let the super level
      filter the records locally.
      This means UDFs and public memvar references will still work,
      although you lose the benefits of having a remote server
      when doing this.
   * contrib/rdd_ads/doc/en/readme.txt
      + Added Compliance section
         ALL USERS NOTICE:
         ACE will always automatically open a structural index (with the same
         name as the data file).  There is no way to turn this feature off.

