@@ -1,3 +1,9 @@
+2000-10-17 11:10 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
+
+    *source/vm/codeblock.c
+        * PRIVATE variables created during a codeblock evaluation have the
+        scope of EVAL function (they are not visible after an evaluation)
+
 2000-10-17 00:55 UTC+0800 Ron Pinkas <ron@profit-master.com>
     * contrib/dot
       ! contrib/dot/pp.prg
